# Essence

./: CMakeLists.txt  README.md  RunCustomTests.sh
Sources/: CMakeLists.txt  Matrix4.cpp  Matrix4.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
Tests/CustomTests/: CMakeLists.txt  main.cpp
Tests/UnitTests/: CMakeLists.txt  main.cpp
